apache-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: webservers
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
