apache-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: webservers
spec:
  selector:
    app: apache
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
